
syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.robobrain.particle";
option java_outer_classname = "ParticleProto";
option objc_class_prefix = "PF";

package particle;

service ParticleFilter
{
    rpc localize (LocRequest) returns (EstimatedLocation) {}
}

message vector3
{
    float x = 10;
    float y = 20;
    float z = 30;
}

message vector4
{
    float x = 10;
    float y = 20;
    float z = 30;
    float w = 40;
}

message measurement
{
    vector3 direction = 10;
    vector3 origin = 20;
    float distance = 30;
}

message LocRequest
{
    string map_location = 10; // path to 3D map file
    float d_theta = 20; // motion direction
    float s = 30; // motion distance
    float bearing_noise = 40; // motion noise
    float steering_noise = 50;
    float distance_noise = 60;
    repeated measurement measurements = 70; // Measurement vector
    repeated vector4 particles = 80; // From previous localization step
}

message EstimatedLocation
{
    vector4 location = 10; // w - rotation around y (vertical) axis
    repeated vector4 particles = 20; // From last localization step
    string error = 30; // Empty if no error
}

